--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -117,6 +117,12 @@
                                         <p>Почасови</p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="/users/import/invoicing" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Фактуриране</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item"> <a href="/users/clients" class="nav-link">
@@ -169,7 +175,7 @@
                                         <p>По часови</p>
                                     </a>
                                 </li>
-                            </ul>
+                            </ul> 
                         </li>
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
