--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,27 +1,33 @@
 body {
-   font-family: 'Roboto', sans-serif;}
-   
-   .mini {
-     font-size: 1em;
-     color: black;
-     line-height: 9em;
-     text-indent: 2.5em;
-     position: absolute;
-     left: 50%;
-     top: 50%; 
-   }
-   .mega, .bola{
-     line-height: 1.65em;
-     font-weight: bold;
-     font-size: 11em;
-     color: black;
-     font-family: 'Roboto', sans-serif;
-     width: 300px;
-     height: 300px;
-     position: absolute;
-     left: 50%;
-     top: 50%; 
-     margin-left: -150px;
-     margin-top: -150px;}
-    
-   .boom {color: #f5f5f5; }
+  font-family: 'Roboto', sans-serif;
+}
+
+.mini {
+  font-size: 2em;
+  color: black;
+  line-height: 9em;
+  text-indent: 2.5em;
+  position: absolute;
+  left: 45%;
+  top: 60%;
+}
+
+.mega,
+.bola {
+  line-height: 1.65em;
+  font-weight: bold;
+  font-size: 25em;
+  color: black;
+  font-family: 'Roboto', sans-serif;
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  left: 45%;
+  top: 30%;
+  margin-left: -150px;
+  margin-top: -150px;
+}
+
+.boom {
+  color: #f5f5f5;
+}
