--- a/views/imports/importSTP.ejs
+++ b/views/imports/importSTP.ejs
@@ -26,7 +26,8 @@
         <h2 class="mb-3">Фактуриране</h2>
         <h2>Избери ЕРП: </h2>
         <div class="row justify-content-center">
-            <label class="radio mr-5">EVN
+            <label class="radio mr-5" data-toggle="tooltip" data-placement="left" container="body"
+            data-original-title="При избиране на тази опция има възможност за импорт на мерения + стп почасови мерения, ако имат профил клиентите">EVN
                 <input type="radio" id="evn" name="radio">
                 <span class="checkmark"></span>
             </label>
@@ -47,8 +48,11 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 <i class="fas fa-upload"></i>
             </div>
+            <div class="clients-no-profile"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
+    <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
+    <script src="../../../../js/helper-functions/bootstrap-tooltips.js"></script>
     <script src="../../../../js/imports/importSTP.js"></script>
 </body>
 
