--- a/views/clients/clients-info.ejs
+++ b/views/clients/clients-info.ejs
@@ -88,7 +88,7 @@
 
         <!-- Hour-Readings -->
         <div id="hour-readings" class="tab-pane fade">
-            <h2 class="text-center">Мерения по часове за клиент: </h2>
+            <h2 id="hourReadingsHeading" class="text-center">Мерения по часове за клиент: </h2>
 
             <label class="switch red-border">
                 <input class="switch-input" type="checkbox" checked />
@@ -96,7 +96,7 @@
                 <span class="switch-handle"></span>
             </label>
 
-            <div class="row">
+            <div class="row calendar-hourly">
                 <div id="calendar-hourly">
                 </div>
 
@@ -138,8 +138,7 @@
 
         <!-- Graphs -->
         <div id="graph" class="tab-pane fade">
-            <h2 class="text-center graphHeading">График</h2>
-
+            <h2 id="graphHeading" class="text-center">График за клиент: </h2>
             <label class="switch red-border">
                 <input class="switch-input" type="checkbox" checked />
                 <span class="switch-label" data-on="Календар" data-off="Графики"></span>
@@ -181,7 +180,7 @@
 
         <!-- Imbalances -->
         <div id="imbalance" class="tab-pane fade">
-            <h2 class="text-center">Небаланси</h2>
+            <h2 id="imbalancesHeading" class="text-center">Небаланси за клиент: </h2>
 
             <label class="switch red-border">
                 <input class="switch-input" type="checkbox" checked />
