--- a/views/clients/clients.ejs
+++ b/views/clients/clients.ejs
@@ -57,6 +57,16 @@
                         <span>По часови</span>
                     </label>
                 </div>
+                <div class="row justify-content-around my-3">
+                    <div>
+                        Име на Клиент <input list="client_names" autocomplete="off"  aria-controls="clients" type="search" id="client_name"
+                            name="client_name">
+                    </div>
+                    <div>
+                        Идентификационен код <input type="text" autocomplete="off"  aria-controls="clients" type="search" list="ident_codes" id="ident_code"
+                            name="ident_code">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
