--- a/views/graphs-menu/graphs-hour-prediction-daily.ejs
+++ b/views/graphs-menu/graphs-hour-prediction-daily.ejs
@@ -29,9 +29,10 @@
     <link rel="stylesheet" href="../../../../css/clients-info.css">
     <title>Document</title>
 </head>
-
+ 
 <body>
-    <h2 class="text-center">График</h2>
+    <h2 id="client-heading" class="text-center mb-3">Клиент:</h2>
+    <h2 id="date-heading" class="text-center">График за дата:</h2>
     <label class="switch">
         <input class="switch-input" type="checkbox" checked />
         <span class="switch-label" data-on="Календар" data-off="Графики"></span>
