--- a/views/readings-menu/hour-readings-daily.ejs
+++ b/views/readings-menu/hour-readings-daily.ejs
@@ -31,7 +31,8 @@
 </head>
 
 <body>
-    <h2 class="text-center">Почасово мерене за дата:</h2>
+    <h2 id="client-heading" class="text-center mb-3">Клиент:</h2>
+    <h2 id="date-heading" class="text-center">Почасово мерене за дата:</h2>
     <label class="switch red-border">
         <input class="switch-input" type="checkbox" checked />
         <span class="switch-label" data-on="Календар" data-off="Графики"></span>
