--- a/views/readings-menu/list-readings-stp.ejs
+++ b/views/readings-menu/list-readings-stp.ejs
@@ -32,7 +32,8 @@
 </head>
 
 <body>
-    <h2 class="text-center">Почасово стп мерене за дата:</h2>
+    <h2 id="client-heading" class="text-center mb-3">Клиент:</h2>
+    <h2 id="date-heading" class="text-center">Почасово стп мерене за дата:</h2>
     <label class="switch red-border">
         <input class="switch-input" type="checkbox" checked />
         <span class="switch-label" data-on="Календар" data-off="Графики"></span>
