--- a/views/invoicing/invoicing-preview-readings.ejs
+++ b/views/invoicing/invoicing-preview-readings.ejs
@@ -24,7 +24,7 @@
             <div class="card-body">
                 <div class="row justify-content-around">
                     <button class="btn-success btn-lg">Върни се</button>
-                    <button class="btn-warning btn-lg">Фактурирай</button>
+                    <button id="invoiceBTN" class="btn-warning btn-lg">Фактурирай</button>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
             </thead>
             <tbody id="tBody">
             </tbody>
-        </table> 
+        </table>
     </main>
     <script src="/js/invoicing/preview-readings.js"></script>
 </body>
