--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -12,7 +12,7 @@
     <script src="../../../js/datatables/datatables.js"></script>
     <link rel="stylesheet" href="../../css/checkboxes.css">
     <link rel="stylesheet" href="../../css/inquiry-readings-stp.css">
-    
+
 </head>
 
 <body>
@@ -61,27 +61,26 @@
         </div>
     </div>
     <div class="row justify-content-around mb-3">
-        <button id="select-cols" class="btn-primary btn-lg">Селектиране на всички колони</button>
         <button id="preview-readings" class="btn-success btn-lg">
             Преглед
         </button>
-        <button class="btn-warning btn-lg">Фактуриране</button>
+        <button id="invoiceBTN" class="btn-warning btn-lg">Фактуриране</button>
         <button id="select-rows" class="btn-primary btn-lg">Селектиране на всички редове</button>
     </div>
     <table id="list-readings" class="display">
         <thead>
             <tr>
-                <th><input type="checkbox" checked> ID на отчет</th>
-                <th><input type="checkbox">Клиентски номер</th>
-                <th><input type="checkbox" checked>Идентификационен код</th>
-                <th><input type="checkbox">Име на клиент</th>
-                <th><input type="checkbox" checked>Период на отчетност от</th>
-                <th><input type="checkbox" checked>Период на отчетност до</th>
-                <th><input type="checkbox">Часова зона</th>
-                <th><input type="checkbox" checked>Количество</th>
-                <th><input type="checkbox" checked>Стойност в лв.</th>
-                <th><input type="checkbox">Тип на документа</th>
-                <th><input type="checkbox">ЕРП</th>
+                <th>ID на отчет</th>
+                <th>Клиентски номер</th>
+                <th>Идентификационен код</th>
+                <th>Име на клиент</th>
+                <th>Период на отчетност от</th>
+                <th>Период на отчетност до</th>
+                <th>Часова зона</th>
+                <th>Количество</th>
+                <th>Стойност в лв.</th>
+                <th>Тип на документа</th>
+                <th>ЕРП</th>
                 <th>Детайли</th>
             </tr>
         </thead>
