--- a/views/exports/inquiry-imbalances.ejs
+++ b/views/exports/inquiry-imbalances.ejs
@@ -175,6 +175,7 @@
     <link href="https://cdn.jsdelivr.net/npm/handsontable@7.4.2/dist/handsontable.full.min.css" rel="stylesheet"
         media="screen">
         <script src="../../../../js/helper-functions/bootstrap-tooltips.js"></script>
+        <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
     <script src="../../../../js/exports/inquiry-imbalances.js"></script>
     <script src="../../../../js/exportFunctions/exportTable.js"></script>
 </body>
