--- a/views/clients/clients.ejs
+++ b/views/clients/clients.ejs
@@ -37,7 +37,7 @@
                     <span class="mr-2 mt-3 text-heading">Вид ЕРП:</span>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="evn" id="evn" checked>
-                        <span>ИВН</span>
+                        <span>EVN</span>
                     </label>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="cez" id="cez" checked>
@@ -54,7 +54,7 @@
                     </label>
                     <label class="checkbox">
                         <input type="checkbox" name="metering_type" id="hourly" value="hourly" checked>
-                        <span>По часови</span>
+                        <span>Почасови</span>
                     </label>
                 </div>
                 <div class="row justify-content-around my-3">
