--- a/views/imports/hour_readingsMultiImport.ejs
+++ b/views/imports/hour_readingsMultiImport.ejs
@@ -33,7 +33,7 @@
         </label>
     </div>
 
-    <h2 class="text-center">Импорт по часови - ИВН / ЕнергоПРО </h2>
+    <h2 class="text-center">Импорт почасови - EVN / ЕнергоПРО </h2>
     <div class="form-group" id="input-excel">
         <label for="exampleFormControlTextarea1"></label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
