--- a/views/imports/hourly.ejs
+++ b/views/imports/hourly.ejs
@@ -38,7 +38,7 @@
         </div>
         <h2>Избери ЕРП:</h2>
         <div class="row justify-content-center">
-            <label class="radio mr-5">ИВН
+            <label class="radio mr-5">EVN
                 <input type="radio" id="evn" name="data-erp">
                 <span class="checkmark"></span>
             </label>
@@ -57,6 +57,9 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             <i class="fas fa-upload"></i>
         </div>
+        <div>
+            <input type="file" id="upload-excel" name="filename">
+        </div> 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
     <script src="../../../../js/helper-functions/bootstrap-tooltips.js"></script>
