--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -32,7 +32,7 @@
                     <span class="text-heading mt-3"> Вид ЕРП:</span>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="evn" id="evn" checked>
-                        <span>ИВН</span>
+                        <span>EVN</span>
                     </label>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="cez" id="cez" checked>
