--- a/views/STP listings/listReadings.ejs
+++ b/views/STP listings/listReadings.ejs
@@ -28,7 +28,7 @@
 <body>
     <div class="card card-default">
         <div class="card-header">
-            <h2 class="text-center">Мерения - СТП по часови</h2>
+            <h2 class="text-center">Мерения - СТП почасови</h2>
         </div>
         <div class="card-body">
             <form action="" method="GET">
@@ -55,7 +55,7 @@
                     <span class="mt-3 text-heading">Вид ЕРП:</span>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="evn" id="evn" checked>
-                        <span>ИВН</span>
+                        <span>EVN</span>
                     </label>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="cez" id="cez" checked>
@@ -89,6 +89,10 @@
         </tbody>
     </table>
     </div>
+    <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
+    <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
+    <script src="../../../../js/helper-functions/remove-duplicates-from-array.js"></script>
+    <script src="../../../../js/helper-functions/get-this-and-last-month-dates.js"></script>
     <script src="../../../../js/readings-menu/STP-hour-readings.js"></script>
 </body>
 
