--- a/views/exports/inquiry-readings.ejs
+++ b/views/exports/inquiry-readings.ejs
@@ -74,7 +74,7 @@
                             <span class="mt-3 text-heading">Вид ЕРП:</span>
                             <label class="checkbox">
                                 <input type="checkbox" name="erp_type" value="evn" id="evn" checked>
-                                <span>ИВН</span>
+                                <span>EVN</span>
                             </label>
                             <label class="checkbox">
                                 <input type="checkbox" name="erp_type" value="cez" id="cez" checked>
