--- a/views/graphs-menu/graph-readings.ejs
+++ b/views/graphs-menu/graph-readings.ejs
@@ -55,7 +55,7 @@
                     <span class="mt-3 text-heading">Вид ЕРП:</span>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="evn" id="evn" checked>
-                        <span>ИВН</span>
+                        <span>EVN</span>
                     </label>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="cez" id="cez" checked>
@@ -89,6 +89,10 @@
         </tbody>
     </table>
     </div>
+    <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
+    <script src="../../../../js/helper-functions/remove-duplicates-from-array.js"></script>
+    <script src="../../../../js/helper-functions/get-this-and-last-month-dates.js"></script>
+    <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
     <script src="../../../../js/graphs/graph-readings.js"></script>
 </body>
 
