--- a/views/graphs-menu/stp-graph-readings.ejs
+++ b/views/graphs-menu/stp-graph-readings.ejs
@@ -56,7 +56,7 @@
                     <span class="mt-3 text-heading">Вид ЕРП:</span>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="evn" id="evn" checked>
-                        <span>ИВН</span>
+                        <span>EVN</span>
                     </label>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="cez" id="cez" checked>
@@ -91,7 +91,11 @@
     </table>
     </div>
     <script src="../../../../js/graphs/stp-graph-readings.js"></script>
+    <script src="../../../../js/helper-functions/remove-duplicates-from-array.js"></script>
+    <script src="../../../../js/helper-functions/get-this-and-last-month-dates.js"></script>
     <script src="../../../../js/helper-functions/bootstrap-tooltips.js"></script>
+    <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
+    <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
 </body>
 
 </html>
