--- a/views/imports/importSTP.ejs
+++ b/views/imports/importSTP.ejs
@@ -42,13 +42,13 @@
         </div>
 
         <body>
-            <div class="form-group" id="input-excel">
+            <div class="form-group invisible" id="input-excel">
                 <label for="exampleFormControlTextarea1">Плъзни документа тук</label>
                 <i class="fas fa-arrow-down"></i>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 <i class="fas fa-upload"></i>
             </div>
-            <div>
+            <div class="invisible">
                 <input type="file" id="upload-excel" name="filename">
             </div>
             <div class="clients-no-profile"></div>
