--- a/views/imports/stp.ejs
+++ b/views/imports/stp.ejs
@@ -58,13 +58,13 @@
                     <span class="checkmark"></span>
                 </label>
             </div>
-            <div class="form-group" id="data-import">
+            <div class="form-group invisible" id="data-import">
                 <label for="exampleFormControlTextarea1">Плъзни документа тук</label>
                 <i class="fas fa-arrow-down"></i>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 <i class="fas fa-upload"></i>
             </div>
-            <div>
+            <div class="invisible">
                 <input type="file" id="upload-stp" name="filename">
             </div> 
         </div>
@@ -89,7 +89,7 @@
                     <span class="checkmark"></span>
                 </label>
             </div>
-            <div class="form-group text-center" id="profile-import">
+            <div class="form-group text-center invisible" id="profile-import">
                 <label for="profiles">Плъзни документа тук</label>
                 <i class="fas fa-arrow-down"></i>
                 <textarea class="form-control" id="profiles" rows="3">
