--- a/views/imports/hourly.ejs
+++ b/views/imports/hourly.ejs
@@ -51,13 +51,13 @@
                 <span class="checkmark"></span>
             </label>
         </div>
-        <div class="form-group" id="hourly-import">
+        <div class="form-group invisible" id="hourly-import">
             <label for="exampleFormControlTextarea1">Плъзни документа тук</label>
             <i class="fas fa-arrow-down"></i>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             <i class="fas fa-upload"></i>
         </div>
-        <div>
+        <div class="invisible">
             <input type="file" id="upload-excel" name="filename">
         </div> 
     </div>
